--- a/MongoBookStoreApp.Web/MongoBookStoreApp.Web.csproj
+++ b/MongoBookStoreApp.Web/MongoBookStoreApp.Web.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.9" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="swashbuckle.aspnetcore.swaggergen" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
