--- a/MongoBookStoreApp.Web/appsettings.Development.json
+++ b/MongoBookStoreApp.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MongoConnection": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BookstoreDb"
   }
 }
