--- a/MongoBookStoreApp.Web/MongoBookStoreApp.Web.csproj
+++ b/MongoBookStoreApp.Web/MongoBookStoreApp.Web.csproj
@@ -29,6 +29,12 @@
     <ProjectReference Include="..\MongoBookStoreApp.Core\MongoBookStoreApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\assets\data\books.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
